--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Gaurav Kunal - </title>
+    <title>Gaurav Kunal - Eager to investigate and learn new things.</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1,user-scalable=no"
     />
-    <meta name="description" content="Just a Carrd template." />
-    <meta property="og:site_name" content="Carrd Template #84" />
-    <meta property="og:title" content="Carrd Template #84" />
+    <meta name="description" content="Eager to investigate and learn new things." />
+    <meta property="og:site_name" content="Gaurav Kunal" />
+    <meta property="og:title" content="Gaurav Kunal - Eager to investigate and learn new things." />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Just a Carrd template." />
+    <meta property="og:description" content="Eager to investigate and learn new things." />
     <meta
       property="og:image"
       content="https://www.gauravkunal.com/assets/images/card.jpg?v=6018b3bd"
