--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
       name="viewport"
       content="width=device-width,initial-scale=1,user-scalable=no"
     />
-    <meta name="description" content="Eager to investigate and learn new things." />
+    <meta
+      name="description"
+      content="Eager to investigate and learn new things."
+    />
     <meta property="og:site_name" content="Gaurav Kunal" />
-    <meta property="og:title" content="Gaurav Kunal - Eager to investigate and learn new things." />
+    <meta
+      property="og:title"
+      content="Gaurav Kunal - Eager to investigate and learn new things."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Eager to investigate and learn new things." />
+    <meta
+      property="og:description"
+      content="Eager to investigate and learn new things."
+    />
     <meta
       property="og:image"
       content="https://www.gauravkunal.com/assets/images/card.jpg?v=6018b3bd"
@@ -1263,70 +1272,63 @@
                     tellus. Morbi mollis dui a neque luctus felis sed amet.
                   </p>
                   <ul id="buttons02" class="buttons">
-                    <li>
+                    <!-- <li>
                       <a href="https://domain.ext/path" class="button n01"
-                        ><svg><use xlink:href="#icon-928"></use></svg
-                        ><span class="label">Codepen</span></a
+                        ><svg><use xlink:href="#icon-928"></use></svg>
+                        <span class="label">Codepen</span></a>
+                    </li> -->
+                    <li>
+                      <a mailto="gkunal7691@gmail.com" class="button n02"
+                        ><svg><use xlink:href="#icon-901"></use></svg>
+                        <span class="label">Email</span></a
                       >
                     </li>
                     <li>
-                      <a href="https://domain.ext/path" class="button n02"
-                        ><svg><use xlink:href="#icon-901"></use></svg
-                        ><span class="label">Email</span></a
+                      <a href="https://github.com/gkunal7691" class="button n03"
+                        ><svg><use xlink:href="#icon-907"></use></svg>
+                        <span class="label">GitHub</span></a
                       >
                     </li>
                     <li>
-                      <a href="https://domain.ext/path" class="button n03"
-                        ><svg><use xlink:href="#icon-907"></use></svg
-                        ><span class="label">GitHub</span></a
+                      <a
+                        href="https://www.instagram.com/_gaurav.kunal_/"
+                        class="button n04"
+                        ><svg><use xlink:href="#icon-910"></use></svg>
+                        <span class="label">Instagram</span></a
+                      >
+                    </li>
+
+                    <li>
+                      <a
+                        href="https://www.linkedin.com/in/gaurav-kunal/"
+                        class="button n06"
+                        ><svg><use xlink:href="#icon-90b"></use></svg>
+                        <span class="label">LinkedIn</span></a
                       >
                     </li>
                     <li>
-                      <a href="https://domain.ext/path" class="button n04"
-                        ><svg><use xlink:href="#icon-910"></use></svg
-                        ><span class="label">Instagram</span></a
+                      <a
+                        href="https://www.facebook.com/gkunal7691"
+                        class="button n07"
+                        ><svg><use xlink:href="#icon-935"></use></svg>
+                        <span class="label">Facebook</span></a
+                      >
+                    </li>
+
+                    <li>
+                      <a
+                        href="https://stackoverflow.com/users/10177206/gaurav-kunal"
+                        class="button n09"
+                        ><svg><use xlink:href="#icon-90f"></use></svg>
+                        <span class="label">Stack Overflow</span></a
                       >
                     </li>
                     <li>
-                      <a href="https://domain.ext/path" class="button n05"
-                        ><svg><use xlink:href="#icon-929"></use></svg
-                        ><span class="label">JSFiddle</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="https://domain.ext/path" class="button n06"
-                        ><svg><use xlink:href="#icon-90b"></use></svg
-                        ><span class="label">LinkedIn</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="https://domain.ext/path" class="button n07"
-                        ><svg><use xlink:href="#icon-935"></use></svg
-                        ><span class="label">Medium</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="https://domain.ext/path" class="button n08"
-                        ><svg><use xlink:href="#icon-956"></use></svg
-                        ><span class="label">Product Hunt</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="https://domain.ext/path" class="button n09"
-                        ><svg><use xlink:href="#icon-90f"></use></svg
-                        ><span class="label">Stack Overflow</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="https://domain.ext/path" class="button n10"
-                        ><svg><use xlink:href="#icon-905"></use></svg
-                        ><span class="label">Twitter</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="https://domain.ext/path" class="button n11"
-                        ><svg><use xlink:href="#icon-920"></use></svg
-                        ><span class="label">Unsplash</span></a
+                      <a
+                        href="https://twitter.com/GauravKunal"
+                        class="button n10"
+                        ><svg><use xlink:href="#icon-905"></use></svg>
+                        <span class="label">Twitter</span></a
                       >
                     </li>
                   </ul>
