--- a/index.html
+++ b/index.html
@@ -1284,13 +1284,13 @@
                       >
                     </li>
                     <li>
-                      <a href="https://github.com/gkunal7691" class="button n03"
+                      <a target="_blank" rel="noreferrer" href="https://github.com/gkunal7691" class="button n03"
                         ><svg><use xlink:href="#icon-907"></use></svg>
                         <span class="label">GitHub</span></a
                       >
                     </li>
                     <li>
-                      <a
+                      <a target="_blank" rel="noreferrer"
                         href="https://www.instagram.com/_gaurav.kunal_/"
                         class="button n04"
                         ><svg><use xlink:href="#icon-910"></use></svg>
@@ -1299,7 +1299,7 @@
                     </li>
 
                     <li>
-                      <a
+                      <a target="_blank" rel="noreferrer"
                         href="https://www.linkedin.com/in/gaurav-kunal/"
                         class="button n06"
                         ><svg><use xlink:href="#icon-90b"></use></svg>
@@ -1307,7 +1307,7 @@
                       >
                     </li>
                     <li>
-                      <a
+                      <a target="_blank" rel="noreferrer"
                         href="https://www.facebook.com/gkunal7691"
                         class="button n07"
                         ><svg><use xlink:href="#icon-935"></use></svg>
@@ -1316,7 +1316,7 @@
                     </li>
 
                     <li>
-                      <a
+                      <a target="_blank" rel="noreferrer"
                         href="https://stackoverflow.com/users/10177206/gaurav-kunal"
                         class="button n09"
                         ><svg><use xlink:href="#icon-90f"></use></svg>
@@ -1324,7 +1324,7 @@
                       >
                     </li>
                     <li>
-                      <a
+                      <a target="_blank" rel="noreferrer"
                         href="https://twitter.com/GauravKunal"
                         class="button n10"
                         ><svg><use xlink:href="#icon-905"></use></svg>
