--- a/index.html
+++ b/index.html
@@ -1272,25 +1272,26 @@
                     tellus. Morbi mollis dui a neque luctus felis sed amet.
                   </p>
                   <ul id="buttons02" class="buttons">
-                    <!-- <li>
-                      <a href="https://domain.ext/path" class="button n01"
-                        ><svg><use xlink:href="#icon-928"></use></svg>
-                        <span class="label">Codepen</span></a>
-                    </li> -->
                     <li>
-                      <a mailto="gkunal7691@gmail.com" class="button n02"
+                      <a href="mailto:gkunal7691@gmail.com" class="button n02"
                         ><svg><use xlink:href="#icon-901"></use></svg>
                         <span class="label">Email</span></a
                       >
                     </li>
                     <li>
-                      <a target="_blank" rel="noreferrer" href="https://github.com/gkunal7691" class="button n03"
+                      <a
+                        target="_blank"
+                        rel="noreferrer"
+                        href="https://github.com/gkunal7691"
+                        class="button n03"
                         ><svg><use xlink:href="#icon-907"></use></svg>
                         <span class="label">GitHub</span></a
                       >
                     </li>
                     <li>
-                      <a target="_blank" rel="noreferrer"
+                      <a
+                        target="_blank"
+                        rel="noreferrer"
                         href="https://www.instagram.com/_gaurav.kunal_/"
                         class="button n04"
                         ><svg><use xlink:href="#icon-910"></use></svg>
@@ -1299,7 +1300,9 @@
                     </li>
 
                     <li>
-                      <a target="_blank" rel="noreferrer"
+                      <a
+                        target="_blank"
+                        rel="noreferrer"
                         href="https://www.linkedin.com/in/gaurav-kunal/"
                         class="button n06"
                         ><svg><use xlink:href="#icon-90b"></use></svg>
@@ -1307,7 +1310,9 @@
                       >
                     </li>
                     <li>
-                      <a target="_blank" rel="noreferrer"
+                      <a
+                        target="_blank"
+                        rel="noreferrer"
                         href="https://www.facebook.com/gkunal7691"
                         class="button n07"
                         ><svg><use xlink:href="#icon-935"></use></svg>
@@ -1316,7 +1321,9 @@
                     </li>
 
                     <li>
-                      <a target="_blank" rel="noreferrer"
+                      <a
+                        target="_blank"
+                        rel="noreferrer"
                         href="https://stackoverflow.com/users/10177206/gaurav-kunal"
                         class="button n09"
                         ><svg><use xlink:href="#icon-90f"></use></svg>
@@ -1324,7 +1331,9 @@
                       >
                     </li>
                     <li>
-                      <a target="_blank" rel="noreferrer"
+                      <a
+                        target="_blank"
+                        rel="noreferrer"
                         href="https://twitter.com/GauravKunal"
                         class="button n10"
                         ><svg><use xlink:href="#icon-905"></use></svg>
