--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="description"
-      content="Eager to investigate and learn new things."
+      content="Trying to change the way we educate our children with real conceptual and analytical learning rather than marks and curriculum."
     />
     <meta property="og:site_name" content="Gaurav Kunal" />
     <meta
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Eager to investigate and learn new things."
+      content="Trying to change the way we educate our children with real conceptual and analytical learning rather than marks and curriculum."
     />
     <meta
       property="og:image"
@@ -1268,8 +1268,12 @@
                 <div>
                   <h1 id="text01">Gaurav Kunal</h1>
                   <p id="text02">
-                    Lorem ipsum dolor mauris cursus at ultrices, blandit magna
-                    tellus. Morbi mollis dui a neque luctus felis sed amet.
+                    Founder - Actuate Minds | Softobotics
+                  </p>
+                  <p id="text02">
+                    Trying to change the way we educate our children with real
+                    conceptual and analytical learning rather than marks and
+                    curriculum.
                   </p>
                   <ul id="buttons02" class="buttons">
                     <li>
