company links added

--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
                 <div>
                   <h1 id="text01">Gaurav Kunal</h1>
                   <p id="text02">
-                    Founder - Actuate Minds | Softobotics
+                    Founder - <a href="https://www.actuateminds.com/">Actuate Minds</a> | <a href="https://www.softobotics.com/">Softobotics</a>
                   </p>
                   <p id="text02">
                     Trying to change the way we educate our children with real
