--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Gaurav Kunal - Eager to investigate and learn new things.</title>
+    <title>Gaurav Kunal - Eager to investigate and learn new things</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
